@@ -19,34 +19,50 @@ package org.apache.solr.store.blockcache;
 
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-public class BufferStore {
-  
-  public static Logger LOG = LoggerFactory.getLogger(BufferStore.class);
-  
-  private static BlockingQueue<byte[]> _1024 = setupBuffers(1024, 1);
-  private static BlockingQueue<byte[]> _8192 = setupBuffers(8192, 1);
-  public static AtomicLong shardBuffercacheLost = new AtomicLong();
-  public static AtomicLong shardBuffercacheAllocate1024 = new AtomicLong();
-  public static AtomicLong shardBuffercacheAllocate8192 = new AtomicLong();
-  public static AtomicLong shardBuffercacheAllocateOther = new AtomicLong();
-  
-  public static void init(int _1024Size, int _8192Size, Metrics metrics) {
+public class BufferStore implements Store {
 
-    LOG.info("Initializing the 1024 buffers with [{}] buffers.", _1024Size);
-    _1024 = setupBuffers(1024, _1024Size);
-    LOG.info("Initializing the 8192 buffers with [{}] buffers.", _8192Size);
-    _8192 = setupBuffers(8192, _8192Size);
-    shardBuffercacheLost = metrics.shardBuffercacheLost;
-    shardBuffercacheAllocate1024 = metrics.shardBuffercacheAllocate1024;
-    shardBuffercacheAllocate8192 = metrics.shardBuffercacheAllocate8192;
-    shardBuffercacheAllocateOther = metrics.shardBuffercacheAllocateOther;
+  private static final Store EMPTY = new Store() {
+
+    @Override
+    public byte[] takeBuffer(int bufferSize) {
+      return new byte[bufferSize];
+    }
+
+    @Override
+    public void putBuffer(byte[] buffer) {
+    }
+  };
+
+  private final static ConcurrentMap<Integer, BufferStore> bufferStores = new ConcurrentHashMap<Integer, BufferStore>();
+
+  private final BlockingQueue<byte[]> buffers;
+
+  private final int bufferSize;
+
+  public synchronized static void initNewBuffer(int bufferSize, long totalAmount) {
+    if (totalAmount == 0) {
+      return;
+    }
+    BufferStore bufferStore = bufferStores.get(bufferSize);
+    if (bufferStore == null) {
+      long count = totalAmount / bufferSize;
+      if (count > Integer.MAX_VALUE) {
+        count = Integer.MAX_VALUE;
+      }
+      BufferStore store = new BufferStore(bufferSize, (int) count);
+      bufferStores.put(bufferSize, store);
+    }
   }
-  
+
+  private BufferStore(int bufferSize, int count) {
+    this.bufferSize = bufferSize;
+    buffers = setupBuffers(bufferSize, count);
+  }
+
   private static BlockingQueue<byte[]> setupBuffers(int bufferSize, int count) {
     BlockingQueue<byte[]> queue = new ArrayBlockingQueue<byte[]>(count);
     for (int i = 0; i < count; i++) {
@@ -54,57 +70,44 @@ public class BufferStore {
     }
     return queue;
   }
-  
-  public static byte[] takeBuffer(int bufferSize) {
-    switch (bufferSize) {
-      case 1024:
-        return newBuffer1024(_1024.poll());
-      case 8192:
-        return newBuffer8192(_8192.poll());
-      default:
-        return newBuffer(bufferSize);
+
+  public static Store instance(int bufferSize) {
+    BufferStore bufferStore = bufferStores.get(bufferSize);
+    if (bufferStore == null) {
+      return EMPTY;
     }
+    return bufferStore;
   }
-  
-  public static void putBuffer(byte[] buffer) {
+
+  @Override
+  public byte[] takeBuffer(int bufferSize) {
+    if (this.bufferSize != bufferSize) {
+      throw new RuntimeException("Buffer with length [" + bufferSize + "] does not match buffer size of ["
+          + bufferSize + "]");
+    }
+    return newBuffer(buffers.poll());
+  }
+
+  @Override
+  public void putBuffer(byte[] buffer) {
     if (buffer == null) {
       return;
     }
-    int bufferSize = buffer.length;
-    switch (bufferSize) {
-      case 1024:
-        checkReturn(_1024.offer(buffer));
-        return;
-      case 8192:
-        checkReturn(_8192.offer(buffer));
-        return;
+    if (buffer.length != bufferSize) {
+      throw new RuntimeException("Buffer with length [" + buffer.length + "] does not match buffer size of ["
+          + bufferSize + "]");
     }
+    checkReturn(buffers.offer(buffer));
   }
-  
-  private static void checkReturn(boolean offer) {
-    if (!offer) {
-      shardBuffercacheLost.incrementAndGet();
-    }
+
+  private void checkReturn(boolean offer) {
+
   }
-  
-  private static byte[] newBuffer1024(byte[] buf) {
+
+  private byte[] newBuffer(byte[] buf) {
     if (buf != null) {
       return buf;
     }
-    shardBuffercacheAllocate1024.incrementAndGet();
-    return new byte[1024];
-  }
-  
-  private static byte[] newBuffer8192(byte[] buf) {
-    if (buf != null) {
-      return buf;
-    }
-    shardBuffercacheAllocate8192.incrementAndGet();
-    return new byte[8192];
-  }
-  
-  private static byte[] newBuffer(int size) {
-    shardBuffercacheAllocateOther.incrementAndGet();
-    return new byte[size];
+    return new byte[bufferSize];
   }
 }
